--- a/templates/error-404.html
+++ b/templates/error-404.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shiny Server - CMU Libraries</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic" rel="stylesheet"
+      type="text/css">
   </head>
 
   <body>
