link to CMU libraries

--- a/templates/directoryIndex.html
+++ b/templates/directoryIndex.html
@@ -13,7 +13,8 @@
 
   <body>
     <h1><a href="https://shiny.rstudio.com">Shiny</a> @ CMU Libraries</h1>
-    <p>Hosting for R-based web applications at Carnegie Mellon University Libraries.</p>
+    <p>Hosting for R-based web applications at <a href="https://library.cmu.edu">Carnegie Mellon University
+        Libraries</a>.</p>
     <p>Contact <a href="mailto:mlincoln@andrew.cmu.edu">Matthew Lincoln</a> with questions.</p>
   </body>
 
